--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,12 +2,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/oaklanddb
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=postgres
 spring.datasource.password=qwertyuiop
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
-
-
 
 #Cloudinary configuration
 cloudinary.cloud_name = dxkvqdxcc
