--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,44 +1,21 @@
-## Hibernate properties
-
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=1234
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-#
-#rsa.private-key=classpath:certs/private.pem
-#rsa.public-key=classpath:certs/public.pem
 
 # Hibernate properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/oakland_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/oaklanddb
 spring.datasource.username=postgres
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.password=papi
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+server.port=9090
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-
-
 
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
 
 admin.super.email=oghogho.courage@gmail.com
 admin.currency=NAIRA
-
-#BaseCurrency {
-#
-#DOLLAR,
-#NAIRA,
-#POUNDS
-#
-#}
-
-
 
 #Cloudinary configuration
 cloudinary.cloud_name = dxkvqdxcc
@@ -49,3 +26,6 @@ spring.servlet.multipart.max-request-size=10MB
 #max file and request size
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=11MB
+
+#Paystack key
+paystack.secretKey = "sk_test_26cc81b3fc91a4e6cd2002ba7f2beeec550cb07f"
